--- a/Admin/Admin.csproj
+++ b/Admin/Admin.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>bin\Debug\</OutputPath>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="%25windir%25\system32\inetsrv\appcmd stop apppool /apppool.name:&quot;Manage&quot;&#xD;&#xA;exit 0" />
   </Target>
