--- a/Admin/appsettings.json
+++ b/Admin/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Connections": {
-    "DefaultConnect": "Data Source=192.168.1.xxx/orcl;User ID=xxx;Password=xxx;"
+    "DefaultConnect": "Data Source=192.168.1.3/Manage;User ID=sa;Password=a6324511;"
   }
 }
