--- a/Admin/appsettings.Development.json
+++ b/Admin/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "Connections": {
+    "DefaultConnect": "Data Source=192.168.1.2/Manage;User ID=sa;Password=a6324511;"
   }
 }
