--- a/Admin/appsettings.Development.json
+++ b/Admin/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Connections": {
-    "DefaultConnect": "Data Source=192.168.1.2/Manage;User ID=sa;Password=a6324511;"
+    "DefaultConnect": "server=192.168.74.44;uid=acadsocdb;password=acadsocdb/*-123;database=AcadsocUserPortrait;Application Name=web;"
   }
 }
