--- a/Admin/appsettings.json
+++ b/Admin/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "Connections": {
-    "DefaultConnect": "server=192.168.74.44;uid=acadsocdb;password=acadsocdb/*-123;database=AcadsocUserPortrait;Application Name=web;"
+    "DefaultConnect": "server=192.168.74.44;uid=acadsocdb;password=acadsocdb/*-123;database=AcadsocUserPortrait;Application Name=web;",
+    "MyConnect": "server=192.168.1.4;uid=sa;password=a6324511;database=Manage;Application Name=web;"
   }
 }
